@@ -564,7 +564,7 @@ extern "C" {
 #else
 
 /* Definition of CRC of all zeros AES key */
-#ifdef XPAR_XSK_MICROBLAZE_KINTEX_ULTRA_PLUS
+#ifdef XSK_MICROBLAZE_ULTRA_PLUS
 #define XSK_EFUSEPL_AES_CRC_OF_ALL_ZEROS	XSK_EFUSEPL_CRC_FOR_AES_ZEROS_ULTRA_PLUS
 #else
 #define XSK_EFUSEPL_AES_CRC_OF_ALL_ZEROS	XSK_EFUSEPL_CRC_FOR_AES_ZEROS
