@@ -125,5 +125,6 @@
 *        vns  02/27/18 Added support for virtex ultrascale and untrascale plus
 *                      Provided efuse secure bit(obfuscation enable feature)
 *                      programming support for ultrascale and untrascale plus.
+*        vns  03/09/18 Added correct status bits for ultrascale plus
 *
  ********************************************************************************/
